# Criticality

./: .gitignore  README.md  awful.py  build_exe.bat  env.sh  forms.py  game.py  game.spec  items.py  map.py  menus.py  npyscreen_demo.py  pyproject.toml  reactor.py  room.py  rooms.py  test_game.py  test_reactor.py  themes.py
story/: intro.txt
story/datapad/: PROTOCOLS.txt  protocols.txt
