[tool.poetry]
name = "gamejamthing2019"
version = "0.1.0"
description = ""
authors = ["Luna <github@luna.allan.scot>"]

[tool.poetry.dependencies]
python = "^3.7"
npyscreen = "^4.10"
windows-curses = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
