[tool.poetry]
name = "gamejamthing2019"
version = "0.1.0"
description = ""
authors = ["Luna <github@luna.allan.scot>"]

[tool.poetry.dependencies]
python = "^3.7"
npyscreen = "^4.10"
windows-curses = "^2.0"
pytest = "^5.1"
pyinstaller = "=3.5"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
